# telegram_auth

./: .env.example  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
authorization/: apps.py  models.py
authorization/application/: container.py  mediator.py
authorization/application/command_handlers/: base.py  login.py  logout.py  registration.py  telegram_user.py
authorization/application/commands/: base.py  login.py  logout.py  registration.py  telegram_user.py
authorization/application/queries/: base.py
authorization/application/query_handler/: base.py
authorization/domain/: repos.py
authorization/domain/base_repos/: user.py  user_token.py
authorization/domain/entities/: base.py  token.py  user.py
authorization/domain/filters/: base.py  token.py  user.py
authorization/domain/values/: token.py
authorization/infrastructure/broker/: __init__.py  base.py  consumer.py  mediator.py
authorization/migrations/: 0001_initial.py  0002_usertoken_expired_at.py  0003_alter_telegramuser_telegram_id.py  0004_alter_usertoken_telegram_user.py
authorization/tasks/: __init__.py  consume_broker.py
bot/: mediator.py  services.py  start.py
bot/broker/: base.py  publisher.py
bot/events/: unknow_message.py  user_auth.py
bot/handlers/: base.py  unknow_message.py  user_auth.py
bot/routers/: auth.py  default.py
configs/: settings.py
docker-compose/: broker.yaml  django_app.yaml  storage.yaml  telegram_bot.yaml
telegram_auth/: manage.py
telegram_auth/telegram_auth/: celery.py  celery_settings.py  settings.py  urls.py
(+18 files in other folders)
