[tool.poetry]
name = "telegram-auth"
version = "0.1.0"
description = ""
authors = ["EgorLozh <lozhkinyegor@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
